package be.eafcuccle.projint.backendfroland.persistence;

public enum AttendanceStatus {
  PRESENT,
  CONNECTED,
  ABSENT_WITHOUT_EXCUSE,
  ABSENT_WITH_EXCUSE,
  ABSENT_WITH_MEDICAL_CERTIFICATE;
}
