package be.eafcuccle.projint.backendfroland.persistence;

public enum Permission {
  READ_PERSON_DETAILS
}
