@startuml conception_classes
left to right direction
skinparam nodesep 100

class Section {
  -name : String
}
class Course {
  -name : String
}
class AcademicYear {
  -beginning : LocalDate
  -end : LocalDate
  +contains(date : LocalDate) : boolean
}
enum Permission {
  READ_PERSON_DETAILS
  ...
}
class Role {
  -name : String
  +grant(permission : Permission) : void
  +revoke(permission : Permission) : void
  +isAllowed(permission : Permission) : boolean
}
class Person {
  -firstName : String
  -lastName : String
  -emailAddress : String
  -phoneNumber : String
  +computeAttendance(courseClass : CourseClass, byDate : LocalDate) : float
  +grant(role : Role) : void
  +revoke(role : Role) : void
  +isAllowedTo(permission : Permission) : boolean
}
class Session {
  -date : LocalDate
  -beginningTime : LocalTime
  -endTime : LocalTime
  -periods : int
  +hasHappenedBy(date : LocalDate) : boolean
}
class Attendance {
  -presencePeriods : Integer
  +computeAttendedPeriods() : int
}
enum AttendanceStatus {
  PRESENT
  CONNECTED
  ABSENT_WITHOUT_EXCUSE
  ABSENT_WITH_EXCUSE
  ABSENT_WITH_MEDICAL_CERTIFICATE
}
class CourseClass {
  -identifier : String
  +computePeriodTotal() : int
  +computePeriodTotalByDate(date : LocalDate) : int
}

Section "0..*" <-- "0..*" Course : is part of <
Course "1" <- "0..*" CourseClass : instantiates <
AcademicYear "1" <-- "0..*" CourseClass
CourseClass "0..*" -> "1..*\nteachers" Person
CourseClass "0..*" -> "0..*\nstudents" Person
CourseClass "1" *--> "0..*" Session
Role "0..*" <-- "0..*" Person : is granted <
Role "0..*" o-> "0..*" Permission
Person "1" --> "0..*\nattendances" Attendance
Session "1\nsession" <- "0..*" Attendance
Attendance "0..*" -> "1\nstatus" AttendanceStatus
@enduml

